package com.example.factory.abstractfactory.pizzastore.order;

import com.example.factory.abstractfactory.pizzastore.pizza.BJCheesePizza;
import com.example.factory.abstractfactory.pizzastore.pizza.BJPepperPizza;
import com.example.factory.abstractfactory.pizzastore.pizza.Pizza;

//这是工厂子类
public class BJFactory implements AbsFactory {

    @Override
    public Pizza createPizza(String orderType) {
        System.out.println("使用的是抽象工厂模式~");
        Pizza pizza = null;
        if(orderType.equals("cheese")) {
            pizza = new BJCheesePizza();
        } else if(orderType.equals("pepper")) {
            pizza = new BJPepperPizza();
        }
        return pizza;
    }

}
