@startuml
'https://plantuml.com/class-diagram

abstract class Pizza {
    prepare():void
    bake():void
    cut():void
    box():void
}

class BJCheesePizza
class BJPepperPizza
class LDCheesePizza
class LDPepperPizza

interface AbsFactory {
    createFactory():Pizza
}

class BJFactory
class LDFactory

class OrderPizza
class OrderPizza2

Pizza o-- BJCheesePizza
Pizza o-- BJPepperPizza
Pizza o-- LDCheesePizza
Pizza o-- LDPepperPizza

AbsFactory o.. BJFactory
AbsFactory o.. LDFactory
OrderPizza o.. AbsFactory
OrderPizza2 o.. AbsFactory

BJCheesePizza <.. BJFactory
BJPepperPizza <.. BJFactory

LDCheesePizza <.. LDFactory
LDPepperPizza <.. LDFactory

@enduml